--- a/TodoListApp/TodoListApp.Android/TodoListApp.Android.csproj
+++ b/TodoListApp/TodoListApp.Android/TodoListApp.Android.csproj
@@ -94,4 +94,9 @@
     <AndroidResource Include="Resources\drawable\delete.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionTodoListAppAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
